<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:context=".MainActivity"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/Team_number"
                android:textColor="@android:color/darker_gray"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/three_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/long_range_points"
                android:textColor="@color/black"
                android:theme="@style/AppTheme"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"/>

            <Button
                android:id="@+id/two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/short_range_points"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/AppTheme"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/free_points"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:theme="@style/AppTheme"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_number_2"
                android:textColor="@android:color/darker_gray"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/three_points_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/long_range_points"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:theme="@style/AppTheme"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/two_points_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/short_range_points"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/AppTheme"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/one_point_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/free_points"
                android:textSize="16sp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:theme="@style/AppTheme"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/reset_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        android:textSize="16sp"
        android:theme="@style/AppTheme"/>
</RelativeLayout>